[add] Adapted forward algotithm for silent states

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 CC = g++ -std=c++11
-CPPFLAGS = -Wpedantic -Wall -Wextra -Winit-self -Winline -Wconversion -Weffc++ -Wctor-dtor-privacy -Woverloaded-virtual -Wconversion -Wsign-promo
+CPPFLAGS = -g -O0 -Wpedantic -Wall -Wextra -Winit-self -Winline -Wconversion -Weffc++ -Wctor-dtor-privacy -Woverloaded-virtual -Wconversion -Wsign-promo
 
 
 all: hmm_test
